--- a/frontend-angular-workspace/package.json
+++ b/frontend-angular-workspace/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "NODE_ENV=production ng build --prod",
+    "build:prod": "cross-env NODE_ENV=production ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -27,8 +27,12 @@
     "@angular/router": "~11.1.0",
     "@nguniversal/express-engine": "^11.1.1",
     "express": "^4.15.2",
+    "extract-css-chunks-webpack-plugin": "^4.9.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "ngx-build-plus": "^11.0.0",
     "rxjs": "~6.6.0",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -37,11 +41,14 @@
     "@angular/cli": "~11.1.0",
     "@angular/compiler-cli": "~11.1.0",
     "@nguniversal/builders": "^11.1.1",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/typography": "latest",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "autoprefixer": "^10.2.4",
     "codelyzer": "^6.0.0",
+    "cross-env": "^7.0.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
@@ -49,6 +56,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ngx-build-plus": "^11.0.0",
+    "ngx-tailwind": "^2.1.0",
     "postcss": "^8.2.4",
     "postcss-import": "^14.0.0",
     "postcss-loader": "^4.2.0",
@@ -57,6 +66,7 @@
     "tailwindcss": "^2.0.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.2",
+    "webpack-cli": "^4.5.0"
   }
 }
