--- a/frontend-angular-workspace/package.json
+++ b/frontend-angular-workspace/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~11.2.3",
     "@nguniversal/express-engine": "^11.1.1",
     "amber-core": "file:projects/amber-core",
+    "date-fns": "^2.20.1",
     "express": "^4.15.2",
     "extract-css-chunks-webpack-plugin": "^4.9.0",
     "mini-css-extract-plugin": "^1.3.9",
