--- a/database-provisioning/docker-compose.yaml
+++ b/database-provisioning/docker-compose.yaml
@@ -14,42 +14,42 @@ services:
     volumes:
       - "./mariadb-data:/var/lib/mysql"
 
-  amber-elasticsearch:
-    restart: always
-    image: elasticsearch:7.12.1
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-    environment:
-      - discovery.type=single-node
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - TAKE_FILE_OWNERSHIP=true
-    volumes:
-      - "./elasticsearch-data:/usr/share/elasticsearch/data"
+  # amber-elasticsearch:
+  #   restart: always
+  #   image: elasticsearch:7.12.1
+  #   ports:
+  #     - "9200:9200"
+  #     - "9300:9300"
+  #   environment:
+  #     - discovery.type=single-node
+  #     - bootstrap.memory_lock=true
+  #     - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+  #     - TAKE_FILE_OWNERSHIP=true
+  #   volumes:
+  #     - "./elasticsearch-data:/usr/share/elasticsearch/data"
 
-  amber-kibana:
-    restart: always
-    image: kibana:7.12.1
-    ports:
-      - "5601:5601"
-    environment:
-      - ELASTICSEARCH_HOSTS=http://amber-elasticsearch:9200
-      - ELASTICSEARCH_URL=http://amber-elasticsearch:9200
-      - SERVER_NAME=0.0.0.0
-    depends_on:
-      - amber-elasticsearch
+  # amber-kibana:
+  #   restart: always
+  #   image: kibana:7.12.1
+  #   ports:
+  #     - "5601:5601"
+  #   environment:
+  #     - ELASTICSEARCH_HOSTS=http://amber-elasticsearch:9200
+  #     - ELASTICSEARCH_URL=http://amber-elasticsearch:9200
+  #     - SERVER_NAME=0.0.0.0
+  #   depends_on:
+  #     - amber-elasticsearch
 
-  amber-logstash:
-    restart: always
-    build:
-      context: ./logstash
-    # environment:
-    #   - monitoring.elasticsearch.hosts=http://amber-elasticsearch:9200
-    depends_on:
-      - amber-mariadb
-      - amber-elasticsearch
-    volumes:
-      - "./logstash/pipeline:/usr/share/logstash/pipeline"
-      - "./logstash/queries:/usr/share/logstash/queries"
+  # amber-logstash:
+  #   restart: always
+  #   build:
+  #     context: ./logstash
+  #   # environment:
+  #   #   - monitoring.elasticsearch.hosts=http://amber-elasticsearch:9200
+  #   depends_on:
+  #     - amber-mariadb
+  #     - amber-elasticsearch
+  #   volumes:
+  #     - "./logstash/pipeline:/usr/share/logstash/pipeline"
+  #     - "./logstash/queries:/usr/share/logstash/queries"
 
