--- a/frontend-angular-workspace/package.json
+++ b/frontend-angular-workspace/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~12.0.1",
     "@nguniversal/express-engine": "^12.0.0",
     "@ngx-pwa/local-storage": "^12.0.0",
+    "@swimlane/ngx-charts": "^18.0.1",
     "amber-core": "file:projects/amber-core",
     "date-fns": "^2.20.1",
     "express": "^4.15.2",
