--- a/frontend-angular-workspace/Taskfile.yml
+++ b/frontend-angular-workspace/Taskfile.yml
@@ -57,3 +57,15 @@ tasks:
       - ng build
         --project end-user
         --output-path /tmp/amber
+
+  deploy-end-user:
+    deps:
+      - build-end-user
+    cmds:
+      - scp -r ./dist/end-user thanh@184.164.94.7:/tmp/amber
+
+  deploy-admin:
+    deps:
+      - build-admin
+    cmds:
+      - scp -r ./dist/administration thanh@184.164.94.7:/tmp/amber-admin
