--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -34,8 +34,12 @@ services:
     image: caddy:2.4.0-alpine
     volumes:
       - ./caddy-production/Caddyfile:/etc/caddy/Caddyfile
-      - /tmp/amber:/var/www/amber
-      - /tmp/amber-admin:/var/www/amber-admin
+      - type: bind
+        source: /tmp/amber
+        target: /var/www/amber
+      - type: bind
+        source: /tmp/amber-admin
+        target: /var/www/amber-admin
     network_mode: host
 
   # amber-elasticsearch:
