Do backend build

--- a/backend-golang/Dockerfile
+++ b/backend-golang/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.16.5-alpine3.13 AS build
 
 WORKDIR /opt/amber-backend
-COPY ./* /opt/amber-backend/
+COPY . /opt/amber-backend/
 RUN go mod tidy
 RUN CGO_ENABLED=0 \
     go build \
@@ -9,5 +9,6 @@ RUN CGO_ENABLED=0 \
     .
 
 FROM scratch
+COPY --from=build /opt/amber-backend/.env /bin/.env
 COPY --from=build /opt/amber-backend/main /bin/amber-backend
-ENTRYPOINT ["/bin/amer-backend"]
+ENTRYPOINT ["/bin/amber-backend"]
