Fix frontend deployment

--- a/frontend-angular-workspace/Dockerfile
+++ b/frontend-angular-workspace/Dockerfile
@@ -1,5 +1,5 @@
 FROM caddy:2.4.0-alpine
 
 COPY Caddyfile /etc/caddy/Caddyfile
-COPY dist/end-user /tmp/amber
-COPY dist/administration /tmp/amber-admin
+COPY dist/end-user /var/www/amber
+COPY dist/administration /var/www/amber-admin
