--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -44,7 +44,7 @@ services:
 
   amber-frontend:
     container_name: amber-frontend
-    image: thanhnguyen2187/amber-frontend
+    image: thanhnguyen2187/amber-frontend:latest
     network_mode: host
 
   amber-backend:
