--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -44,12 +44,12 @@ services:
 
   amber-frontend:
     container_name: amber-frontend
-    image: thanhnguyen2187/amber-frontend:latest
+    image: docker.io/thanhnguyen2187/amber-frontend:latest
     network_mode: host
 
   amber-backend:
     container_name: amber-backend
-    image: thanhnguyen2187/amber-backend
+    image: docker.io/thanhnguyen2187/amber-backend
     network_mode: host
 
   # amber-elasticsearch:
